<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InfoPage" Id="{d637c93f-d204-44a7-9e5e-162e7f05feb7}">
    <Declaration><![CDATA[TYPE ST_InfoPage :
STRUCT
	sApplication 	 : STRING(254);
	sProjectId		 : STRING(32);
	rSoftwareVersion : REAL;
	sTwincatVersion	 : STRING(254);
	sVSVersion		 : STRING(254);
	sDate			 : STRING(32);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>