<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ActuatorStatus" Id="{03e2123d-6ce6-49e6-a820-1996bf946a02}">
    <Declaration><![CDATA[TYPE ST_ActuatorStatus :
STRUCT
	bEnabled    : BOOL;
    bBusy       : BOOL;
    bDone       : BOOL;
    bError      : BOOL;
    iErrorCode  : UDINT;
    fPosition   : LREAL;
	bMovingFwd	: BOOL;
	bMovingBck	: BOOL;
    eState      : E_ActuatorState;
    sMessage    : STRING[80];	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>