<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_RecipeFileInfo" Id="{ed24927f-e381-420e-a82d-2f2acab01bfa}">
    <Declaration><![CDATA[TYPE ST_RecipeFileInfo :
STRUCT
	sFileName      : STRING(128); 	// Nome do arquivo .json
    dtLastModified : DT;         	// Timestamp do arquivo
    sCreatedBy     : STRING(64); 	// From JSON
    dCreationDate  : DATE;       	// From JSON
	sMethodName	   : STRING;  		// From JSON
    iRevision      : INT;        	// From JSON
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>