<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_MethodParameter" Id="{3550148b-714d-4fc2-bf43-3992bac630cc}">
    <Declaration><![CDATA[TYPE ST_MethodParameter :
STRUCT
	
	iRinse1SolventReservoir 						: INT; 		//Range 1-4
	iRinse2SolventReservoir 						: INT; 		//Range 0-4 (0 = skip step)
	iWash1SolventReservoir 							: INT; 		//Range 0-4 (0 = skip step)
	iWash2SolventReservoir 							: INT; 		//Range 0-4 (0 = skip step)
	tRinse1RecirculateTime							: TIME; 	//5-600 seg
	tRinse2RecirculateTime							: TIME; 	//5-600 seg
	tWash1RecirculateTime							: TIME; 	//5-600 seg
	tWash2RecirculateTime							: TIME; 	//5-600 seg
	iRinse1PumpVelocity								: INT;		//0-900 rpm
	iRinse2PumpVelocity								: INT;		//0-900 rpm
	iWash1PumpVelocity								: INT;		//0-900 rpm
	iWash2PumpVelocity								: INT;		//0-900 rpm
	iRinse1SolventVolume							: INT;		//0-250 ml (specified for each fluid circuit)
	iRinse2SolventVolume							: INT;		//0-250 ml (specified for each fluid circuit)
	iWash1SolventVolume								: INT;		//0-250 ml (specified for each fluid circuit)
	iWash2SolventVolume								: INT;		//0-250 ml (specified for each fluid circuit)
	tSoakTime										: TIME;		//0-240 sec
	tAgitate1Time									: TIME;		//0-60 sec (Mix Rinse 1 and Rinse 2 Solvents)
	tAgitate2Time									: TIME;		//0-60 sec (Remix Rinse 1 and Rinse 2 Solvents)
	iNumberOfVialSetsToFill							: INT;		//Range 1 - 4
	rVialPrimeVolume								: REAL;		//0.0 - 25.0 mL (Dispensed to waste)
	rVialSet1Volume									: REAL;		//0.0 - 10.0 mL
	rVialSet2To4Volume								: REAL;		//0.0 - 10.0 mL
	tAirDryTime										: TIME; 	//0-600 seg	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>